Arranged the events tab

--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+               <!--  <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Ophthalmology <span></span></h4>
                 <p> Cataract surgery on goat eye, Corneal foreign body removal, Fundus examination, Sclero corneal suturing, Sub conjunctival and intraviteral suturing - <b>849</b></p>
               </div>
@@ -261,9 +261,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>ENT <span></span></h4>
                 <p>Otoscope, Tracheostomy, Cricothyrodotomy, Heimlich Maneuver, Foreign body removal, Nasal bleeding management - <b>599</b></p>
               </div>
@@ -272,9 +272,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>BPCS<span></span></h4>
                 <p>Heart sounds and murmurs, Lumbar puncture, Ascitic tap, Biopsy processing techniques - <b>499</b> </p>
               </div>
@@ -283,9 +283,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Forensic Medicine<span></span></h4>
                 <p>You will be getting hands on experience on Ophthmology - <b>499</b> </p>
               </div>
@@ -294,9 +294,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+               <!--  <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Obstetrics and Gynaecology<span></span></h4>
                 <p>You will be getting hands on experience on Ophthmology - <b>899</b> </p>
               </div>
@@ -305,9 +305,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                 <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Oncology<span></span></h4>
                 <p>You will be getting hands on experience on Ophthmology - <b>249</b> </p>
               </div>
@@ -316,9 +316,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+               <!--  <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Wet Lab<span></span></h4>
                 <p>Basic Suturing and knotting on PIG Skin, Hands on Bowel Suturing on BUFFALO Intestine - <b>849</b> </p>
               </div>
@@ -327,9 +327,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>GI Laparoscopy<span></span></h4>
                 <p>Laproscopy, Endoscopy, Biopsy, Foreign body removal - <b>499</b></p>
               </div>
@@ -338,9 +338,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Basic Surgical Skills<span></span></h4>
                 <p>Gloving & Gowning, Ryles Tube (On Mannequin), Foley's Catheter (On Mannequin), Suturing On Pig Skin, Wound Dressing, Abscess Drainage - <b>799</b> </p>
               </div>
@@ -349,9 +349,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                </div> -->
                 <h4>Orthopedics<span></span></h4>
                 <p>External fixation and application, Fracture fixation, Implant exhibition, Splints and tractions - <b>749</b> </p>
               </div>
@@ -360,9 +360,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+               <!--  <div class="speaker">
+                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>ECG & STEMI<span></span></h4>
                 <p>Basics of ECG, STEMI - <b>249</b> </p>
               </div>
@@ -371,9 +371,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>ICU Care<span> Providing care that makes difference</span></h4>
                 <p>Trauma Care Approach, Emergency Care Set, Monitoring of Patient and ICU shift, Management of Poisoning, Team based approach on Cardiac Arrest - <b>799</b> </p>
               </div>
@@ -382,9 +382,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Neonatology<span></span></h4>
                 <p>Preparation at birth,routine care, Positive pressure ventilation, Intubation, Chest compression,drugs and vascular access, Simulation and debriefing - <b>399</b> </p>
               </div>
@@ -393,9 +393,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                   <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                </div> -->
                 <h4>Radiology<span></span></h4>
                 <p>USG - Antenatal Mother;Abdomen, CT - RTA(Haemorrhage), X-Ray - Types of X-Ray; Positions;examples, Basics of MRI - <b>349</b> </p>
               </div>
@@ -404,9 +404,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Bio Chemistry<span></span></h4>
                 <p>ABG Analysis,Cardiac Tropinis, Lipid Profile - <b>249</b> </p>
               </div>
@@ -415,9 +415,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Pulmonology<span></span></h4>
                 <p>TB programme, Thoracocentesis, Interpretation of chest xrays - <b>399</b> </p>
               </div>
