Corrected indentation in events

--- a/index.html
+++ b/index.html
@@ -488,9 +488,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+               <!--  <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Research Paper Presentation <span></span></h4>
                 <p> A formal platform for sharing original research findings in the medical field at the conference - Price </p>
               </div>
@@ -499,9 +499,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Research Proposal Presentation<span></span></h4>
                 <p>A structured opportunity to present proposed research projects in the medical field, outlining objectives, methodologies - Price</p>
               </div>
@@ -510,9 +510,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Poster Presentation<span></span></h4>
                 <p>A visual display of research findings in the medical field, presented on a poster format that allows for concise summaries of the study's objectives - Price</p>
               </div>
@@ -521,9 +521,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+               <!--  <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Case Presentation<span></span></h4>
                 <p>A detailed discussion of a specific patient case in the medical field, highlighting the clinical background, diagnosis, treatment, and outcomes - Price</p>
               </div>
@@ -532,9 +532,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Medical Quiz<span></span></h4>
                 <p>An engaging and interactive session designed to test participants' knowledge on various medical topics - Price</p>
               </div>
@@ -543,9 +543,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Med-Charades<span></span></h4>
                 <p>A fun and interactive game where participants act out medical terms, conditions, or procedures without speaking - Price</p>
               </div>
@@ -554,9 +554,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Medihunt<span></span></h4>
                 <p>An interactive and educational activity where participants solve clues related to medical concepts and practices to find hidden items - Price</p>
               </div>
@@ -565,9 +565,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Science Fair<span></span></h4>
                 <p>An event where participants showcase innovative projects and experiments related to medical science, allowing them to present their findings - Price</p>
               </div>
@@ -648,9 +648,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Short Film Contest<span></span></h4>
                 <p>Unleash your creativity at our Short Film Contest, where medical innovation meets cinematic storytelling. Showcase your vision and inspire change </p>
               </div>
@@ -659,9 +659,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                </div> -->
                 <h4>Flash Mob<span></span></h4>
                 <p>Join the excitement and surprise at our Flash Mob, where spontaneous dance meets the spirit of community</p>
               </div>
@@ -670,9 +670,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                </div> -->
                 <h4>Fashion Parade<span></span></h4>
                 <p>Step into the spotlight at our Fashion Parade, where style and creativity collide on the runway</p>
               </div>
@@ -681,9 +681,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
                 <h4>Celebrity Night<span></span></h4>
                 <p>Experience the glitz and glamour at our Celebrity Night, where stars shine and unforgettable moments await</p>
               </div>
@@ -692,9 +692,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                   <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                </div> -->
                 <h4>Singing Competition<span></span></h4>
                 <p>Showcase your talent at our Singing Competition, where voices rise and dreams take flight! Join us for an unforgettable night of music </p>
               </div>
@@ -703,9 +703,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                   <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                </div> -->
                 <h4>Dance Competition<span></span></h4>
                 <p>Get ready to groove at our Dance Competition, where rhythm and talent take center stage! Join us for an electrifying showcase of moves </p>
               </div>
@@ -714,9 +714,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                </div> -->
                 <h4>DJ Night<span></span></h4>
                 <p>Turn up the volume at our DJ Night, where electrifying beats and vibrant energy create an unforgettable party atmosphere! </p>
               </div>
@@ -725,9 +725,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                </div> -->
                 <h4>Medi Fun<span></span></h4>
                 <p>Join us for Medi Fun, where healthcare meets entertainment in a lively celebration of wellness and camaraderie! </p>
               </div>
@@ -736,9 +736,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
-                </div>
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                </div> -->
                 <h4>Esports<span></span></h4>
                 <p>Step into the arena at our Esports event, where skill and strategy collide in thrilling competition!</p>
               </div>
