--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
               <div class="col-md-2"></div>
               <div class="col-md-10">
                 <h4>Registration</h4>
-                <p>Register using the Google Form given below</p>
+                <p>Register using the Google Form - <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJlf_sqR_gvsfzsMDp1vNin3hHwdEt-BLPjae91HeDNzNwkw/viewform?usp=dialog" target="_blank"> Google Form Link </a></p>
               </div>
             </div>
 
