Added changes to the events

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Forensic Medicine<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - <b>499</b> </p>
+                <p> Bomb blast injuries effect and exposure, Experience effective toxicology on hand, Art of forensic in a role play - <b>499</b> </p>
               </div>
             </div>
 
@@ -298,7 +298,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Obstetrics and Gynaecology<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - <b>899</b> </p>
+                <p>D&C , IUD insertion and removal, Normal vaginal delivery and episiotomy, Assisted breech delivery, Cervical assessment and bimanual examination - <b>899</b> </p>
               </div>
             </div>
 
@@ -309,7 +309,7 @@
                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Oncology<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - <b>249</b> </p>
+                <p> Introduction to oncology, diagnostic imaging and biopsy techniques, cancer treatment & management, advances in cancer, research & mammography - <b>249</b> </p>
               </div>
             </div>
 
@@ -492,7 +492,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Research Paper Presentation <span></span></h4>
-                <p> A formal platform for sharing original research findings in the medical field at the conference - Price </p>
+                <p> A formal platform for sharing original research findings in the medical field at the conference - ₹49  </p>
               </div>
             </div>
 
@@ -503,7 +503,7 @@
                    <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Research Proposal Presentation<span></span></h4>
-                <p>A structured opportunity to present proposed research projects in the medical field, outlining objectives, methodologies - Price</p>
+                <p>A structured opportunity to present proposed research projects in the medical field, outlining objectives, methodologies - ₹49 </p>
               </div>
             </div>
 
@@ -514,7 +514,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Poster Presentation<span></span></h4>
-                <p>A visual display of research findings in the medical field, presented on a poster format that allows for concise summaries of the study's objectives - Price</p>
+                <p>A visual display of research findings in the medical field, presented on a poster format that allows for concise summaries of the study's objectives - ₹49 </p>
               </div>
             </div>
 
@@ -525,7 +525,18 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Case Presentation<span></span></h4>
-                <p>A detailed discussion of a specific patient case in the medical field, highlighting the clinical background, diagnosis, treatment, and outcomes - Price</p>
+                <p>A detailed discussion of a specific patient case in the medical field, highlighting the clinical background, diagnosis, treatment, and outcomes - ₹49 </p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+               <!--  <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
+                <h4> Histology/Histopathology Rangoli <span></span></h4>
+                <p> Medical Rangoli: Where colors dance and joy blossoms with a touch of Medicine field - Free </p>
               </div>
             </div>
 
@@ -536,7 +547,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Medical Quiz<span></span></h4>
-                <p>An engaging and interactive session designed to test participants' knowledge on various medical topics - Price</p>
+                <p>An engaging and interactive session designed to test participants' knowledge on various medical topics - ₹99 </p>
               </div>
             </div>
 
@@ -547,7 +558,7 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Med-Charades<span></span></h4>
-                <p>A fun and interactive game where participants act out medical terms, conditions, or procedures without speaking - Price</p>
+                <p>A fun and interactive game where participants act out medical terms, conditions, or procedures without speaking - ₹99 </p>
               </div>
             </div>
 
@@ -557,8 +568,8 @@
                 <!-- <div class="speaker">
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
-                <h4>Medihunt<span></span></h4>
-                <p>An interactive and educational activity where participants solve clues related to medical concepts and practices to find hidden items - Price</p>
+                <h4>Hogwarts themed Medihunt<span></span></h4>
+                <p>An interactive and educational activity where participants solve clues related to medical concepts and practices to find hidden items - ₹149 </p>
               </div>
             </div>
 
@@ -569,9 +580,55 @@
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
                 <h4>Science Fair<span></span></h4>
-                <p>An event where participants showcase innovative projects and experiments related to medical science, allowing them to present their findings - Price</p>
+                <p>An event where participants showcase innovative projects and experiments related to medical science, allowing them to present their findings - Free (for delegates)</p>
               </div>
             </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
+                <h4>Medical Hackathon<span></span></h4>
+                <p>Hack Health, Heal Futures - Free</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
+                <h4>Medical Model<span></span></h4>
+                <p>Hack Health, Heal Futures - ₹99</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
+                <h4>Chart<span></span></h4>
+                <p>Get informative charts - ₹49</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <!-- <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div> -->
+                <h4>RTA<span></span></h4>
+                <p> - ₹249</p>
+              </div>
+            </div>
+
+            
 <!-- 
             <div class="row schedule-item">
               <div class="col-md-2"><time>10:00 AM</time></div>
@@ -651,7 +708,7 @@
                 <!-- <div class="speaker">
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div> -->
-                <h4>Short Film Contest<span></span></h4>
+                <h4>Short Film Competition<span></span></h4>
                 <p>Unleash your creativity at our Short Film Contest, where medical innovation meets cinematic storytelling. Showcase your vision and inspire change </p>
               </div>
             </div>
@@ -689,16 +746,16 @@
               </div>
             </div>
 
-            <div class="row schedule-item">
+            <!-- <div class="row schedule-item">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <!-- <div class="speaker">
+                <div class="speaker">
                    <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
-                </div> -->
+                </div> 
                 <h4>Singing Competition<span></span></h4>
                 <p>Showcase your talent at our Singing Competition, where voices rise and dreams take flight! Join us for an unforgettable night of music </p>
               </div>
-            </div>
+            </div> -->
 
             <div class="row schedule-item">
               <div class="col-md-2"></div>
@@ -706,7 +763,7 @@
                 <!-- <div class="speaker">
                    <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
                 </div> -->
-                <h4>Dance Competition<span></span></h4>
+                <h4>Retro Dance<span></span></h4>
                 <p>Get ready to groove at our Dance Competition, where rhythm and talent take center stage! Join us for an electrifying showcase of moves </p>
               </div>
             </div>
@@ -728,8 +785,30 @@
                 <!-- <div class="speaker">
                   <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
                 </div> -->
-                <h4>Medi Fun<span></span></h4>
-                <p>Join us for Medi Fun, where healthcare meets entertainment in a lively celebration of wellness and camaraderie! </p>
+                <h4>Musical Band<span></span></h4>
+                <p>Join us for an enchanting cultural evening where the vibrant rhythms of our musical band </p>
+              </div>
+            </div>
+
+            <!-- <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                 <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                </div>
+                <h4>Esports<span></span></h4>
+                <p>Step into the arena at our Esports event, where skill and strategy collide in thrilling competition!</p>
+              </div>
+            </div> -->
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <!-- <div class="speaker">
+                   <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                </div> -->
+                <h4>Dance Performance<span></span></h4>
+                <p>Get ready to groove at our Dance Competition, where rhythm and talent take center stage! Join us for an electrifying showcase of moves </p>
               </div>
             </div>
 
@@ -737,12 +816,25 @@
               <div class="col-md-2"></div>
               <div class="col-md-10">
                 <!-- <div class="speaker">
-                  <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                   <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
                 </div> -->
-                <h4>Esports<span></span></h4>
-                <p>Step into the arena at our Esports event, where skill and strategy collide in thrilling competition!</p>
+                <h4> Reels Competition<span></span></h4>
+                <p>Create a short, engaging video that highlights innovative practices, breakthrough research </p>
               </div>
             </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"></div>
+              <div class="col-md-10">
+                <!-- <div class="speaker">
+                   <img src="img/speakers/1.jpg" alt="Brenden Legros"> 
+                </div> -->
+                <h4> Photography Competition<span></span></h4>
+                <p>Submit your most striking images that tell a story, evoke emotion, or showcase the beauty of life </p>
+              </div>
+            </div>
+
+
 <!-- 
             <div class="row schedule-item">
               <div class="col-md-2"><time>10:00 AM</time></div>
